--- a/es/hackaton.html
+++ b/es/hackaton.html
@@ -239,8 +239,8 @@
       </nav>
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script src="js/materialize.js"></script>
-      <script src="js/init.js"></script>
+      <script src="../js/materialize.js"></script>
+      <script src="../js/init.js"></script>
       <script>
           $('.dropdown-button').dropdown({
               inDuration: 300,
