--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://metodosbayesianos.github.io/es/index.html">
+<meta http-equiv="refresh" content="0; url=https://bayesplurinacional.github.io/es/index.html">
