--- a/en/about.html
+++ b/en/about.html
@@ -119,85 +119,133 @@
 
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="section" style="text-align: justify;">
+
+                <h4 class="header col s12 light">
+                Plurinational Bayesian Congress 2023
+                <h4>
+
+                <h6 class="header col s12 light">
+                To boost the Bayesian communities in Latin America, a group of specialists from different regions decided to organize the first <b>Plurinational Bayesian Congress</b> on August 4, 5 and 6, 2023 in Santiago del Estero, Argentina.</h6>
+
+                <h6 class="header col s12 light">
+                The diversity of disciplines was extraordinary: ecology, medicine, astronomy, geology, psychology, quantum physics, economics, engineering, philosophy, biology, statistics, computer science, anthropology, among others.
+                The diversity of regions as well: Chile, Paraguay, Uruguay, Colombia, Honduras, Brazil, Argentina (Córdoba, Salta, Mendoza, Entre Rios, Santa Fe, Santiago del Estero, Buenos Aires), from the private, public and academic sectors.
+                </h6>
+
+                <h6 class="header col s12 light">
+                We shared ideas, experiences and doubts about the construction of knowledge in empirical sciences, using different dialects but with the same common language, that of the strict application of the rules of probability (aka Bayes) or that of intersubjective agreements in contexts of uncertainty.
+                Our gratitude to the team of the Secretariat of Science and Technology of Santiago del Estero for the integral and human professionalism.
+                </h6>
+
+                <h6 class="header col s12 light">
+                We returned with renewed energy. We have already started to build teams to organize next year's activities. In addition to webinars, workshops, face-to-face courses, we decided to organize a Plurinational Bayesian School-Congress 2024. Here are some pictures of the Plurinational Bayesian Congress 2023.
+                </h6>
+
+                <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1">
+                <img class="responsive-img" src="img/congreso2023/01.jpg" alt="Figure 1">
+                </div>
             </div>
 
             <br>
 
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
-
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1">
+                <img class="responsive-img" src="img/congreso2023/02.jpg" alt="Figure 1">
                 </div>
+            </div>
 
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1">
+                <img class="responsive-img" src="img/congreso2023/03.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="img/congreso2023/04.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="img/congreso2023/05.jpeg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="img/congreso2023/21.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="img/congreso2023/07.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="img/congreso2023/10.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="img/congreso2023/13.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="img/congreso2023/27.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="img/congreso2023/31.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="img/congreso2023/39.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            </div>
         </div>
-        </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
-            </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
-
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
+        <p class="bottom-blank"><!--Vertical spacer--></p>
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
