--- a/en/community.html
+++ b/en/community.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html>
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -119,85 +119,117 @@
 
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
             </div>
+        </div>
 
-            <br>
+        <div class="container">
+          <div class="section" style="text-align: justify;">
+              <h4>Plurinational Bayesian Community</h4>
+              <img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/whipalaNico.jpeg" alt="Tapa" style="width: 80%;">
+              <h6>Below you will find Latin American and Caribbean flags. There you will find the Bayesian coauthorship networks (scopus source). Touching the "person" nodes displays the name and affiliation. Touching the "article" nodes displays the title and abstract.</h6>
 
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
 
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
+              <h6>We selected only the articles that had an affiliation in Latin America and any of the following keywords: (bayes OR bayesian OR causal inference OR state space model OR hidden markov model OR probabilistic programing OR markov chain monte carlo OR hamiltonian monte carlo OR hybrid monte carlo OR sequential monte carlo OR expectation propagation OR belief propagation OR variational inference OR MaxEnt OR sum-product algorithm) AND (NOT (naive bayes OR bayes syndrome))</h6>
+
+              <h6>Some countries need to be added.</h6>
+
+              <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redArgentina.html">Argentina</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redArgentina.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/argentina.png" alt="Tapa" style="width: 100%;"></a>
                 </div>
 
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redBolivia.html">Bolivia</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redBolivia.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/bolivia.png" alt="Tapa" style="width: 92%;"></a>
+                </div>
+
+            </div>
+
+
+              <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redBrazil.html">Brasil</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redBrazil.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/brasil.png" alt="Tapa" style="width: 96%;"></a>
+                </div>
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redChile.html">Chile</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redChile.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/chile.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redColombia.html">Colombia</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redColombia.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/colombia.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redCuba.html">Cuba</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redCuba.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/cuba.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redEcuador.html">Ecuador</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redEcuador.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/ecuador.png" alt="Tapa" style="width: 95%;"></a>
+                </div>
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redGuatemala.html">Guatemala</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redGuatemala.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/guatemala.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redHonduras.html">Honduras</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redHonduras.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/honduras.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redMexico.html">México</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redMexico.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/mexico.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redNicaragua.html">Nicaragua</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redNicaragua.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/nicaragua.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redArgentina.html">Panama</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redArgentina.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/panama.png" alt="Tapa" style="width: 90%;"></a>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redParaguay.html">Paraguay</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redParaguay.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/paraguay.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redPeru.html">Perú</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redPeru.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/peru.png" alt="Tapa" style="width: 84%;"></a>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redUruguay.html">Uruguay</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redUruguay.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/uruguay.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+                <div class="column">
+                  <h5><a href="http://bayesdelsur.com.ar/redes/redVenezuela.html">Venezuela</a></h5>
+                  <a href="http://bayesdelsur.com.ar/redes/redVenezuela.html"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/venezuela.png" alt="Tapa" style="width: 100%;"></a>
+                </div>
+            </div>
+
+              </div>
         </div>
-        </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
-            </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
-
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
+        <p class="bottom-blank"><!--Vertical spacer--></p>
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
