--- a/en/faq.html
+++ b/en/faq.html
@@ -120,84 +120,87 @@
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
             <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
+            <h2 class="header center blue-grey-text">Plurinational Bayesian Congress</h2>
+            <div class="row center">
+                <h5 class="header col s12 light">August 4 and 5, 2023 - Santiago del Estero, Argentina</h5>
             </div>
+            <div class="row center">
 
-            <br>
-
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
-
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
+        <div class="container">
+            <div class="section" style="text-align: justify;">
+                <h5><ul class="browser-default">
+                    <b>What is the cost of registration?</b>
+                    <br>
+                    <br>
+                    The CBP is free. Nevertheless, we ask that you register to have an estimate of the number of attendees to the event.
+                    <br>
+                    <br>
+                    <br>
+                    <b>Will scholarships be awarded?</b>
+                    <br>
+                    <br>
+                    Yes, the exact number of scholarships will depend on the number of sponsors and the economic situation of the country.
+                    <br>
+                    <br>
+                    <br>
+                    <b>Who is the event for?</b>
+                    <br>
+                    <br>
+                    Undergraduate and graduate students, researchers, teachers, and anyone who uses, develops or implements Bayesian methods, or who are simply interested and want to learn more.
+                    <br>
+                    Not familiar with these methods or not sure how to use them to do science? You can also attend as we will
+                    have tutorials aimed at meeting these needs.
+                    <br>
+                    <br>
+                    <br>
+                    <b>To participate do I have to present a poster, talk or tutorial?</b>
+                    <br>
+                    <br>
+                    That's not really necessary. Anyway, we believe that posters are a very good way of interacting in this type of event, so 
+                    we invite you to present a poster explaining what you work on. Even if you don't use Bayesian methods yet,
+                    but are interested in applying them to your work, a poster is an excellent way to discuss those possible applications.
+                    <br>
+                    <br>
+                    <br>
+                    <b>In what language should I prepare and present a poster, talk or tutorial?</b>
+                    <br>
+                    <br>
+                    It can be in Spanish, English or Portuguese.
+                    <br>
+                    <br>
+                    <br>
+                    <b>What dimensions should the posters have?</b>
+                    <br>
+                    <br>
+                    Maximum dimensions: 90 cm wide x 100 cm high.
+                    <br>
+                    <br>
+                    <br>
+                    <b>Do I have to bring a notebook to do the tutorials?</b>
+                    <br>
+                    <br>
+                    Yes, we recommend that you attend with your own laptop.
+                    <br>
+                    <br>
+                    <br>
+                    <b>Do I have to have a particular package installed?</b>
+                    <br>
+                    <br>
+                    Yes, we will be informing the list of necessary packages once we have confirmed all the tutorials.
+                    <br>
+                    <br>
+                    <br>
+                    <b>Your question is not on the list?</b>
+                    <br>
+                    <br>
+                    Please write to us <a href="mailto:bayesdelsur@gmail.com">bayesdelsur@gmail.com</a>
+                </ul></h5>
                 </div>
-
         </div>
-        </div>
+    </div>
+    </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
-            </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
-
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
+        <p class="bottom-blank"><!--Vertical spacer--></p>
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
