--- a/en/hackathon.html
+++ b/en/hackathon.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html>
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -117,88 +117,81 @@
 
 
 
+
         <div class="section no-pad-bot" id="index-banner">
-            <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
-            </div>
+          <div class="container">
+          </div>
+      </div>
 
-            <br>
+      <div class="container">
+          <div class="section">
+              <h3 class="header col s12 light">
+                  Competition "Bets of life"
+              </h3>
 
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
-
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
-                </div>
-
-        </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
-            </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
+              <div class="section" style="text-align: justify;">
 
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
+              <h4 class="header col s12 light">
+                  Dates
+              </h4>
+                <ul>
+                    <li>&#x2022; <b>Beginning of registrations</b>: June 21st (Andean New Year)</li>
+                    <li>&#x2022; <b>End of registrations and beginning of submissions</b>: August 1st (Pachamama Day)</li>
+                    <li>&#x2022; <b>End of submissions</b>: October 12th (Cultural Diversity Day)</li>
+                    <li>&#x2022; <b>Prize</b>: November 4th (Unity of the Latin American Peoples Day)</li>
+                </ul>
 
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
+              <h4 class="header col s12 light">
+                  Competition.
+              </h4>
+                <p>The game is an inference problem with bets and exchange of resources. Registration and submission will be through the telegram bot <a href="https://t.me/MetodosBayesianosBot"><b>https://t.me/MetodosBayesianosBot</b></a>.
+                In addition, it is recommended to join the Telegram Hackathon channel to interact with contest participants <a href="https://t.me/bayesplurinacional/1"><b>https://t.me/BayesPlurinacional/1</b></a>.
+                </p>
+
+              <h5 class="header col s12 light">
+                  Prize.
+              </h5>
+
+                 <p>Each person starts with one unit of resources.
+                 A prize, equivalent to 150,000 Argentine pesos, will be distributed according to the proportion of resources that each person has over the total at the end of the betting process.
+                </p>
+
+                <h5 class="header col s12 light">
+                  Inference, intervention, bets and reciprocity.
+              </h5>
+
+                <p>The problem is a four-gate Monty Hall, in which the gift position is generated with a bias that has a cycle of 365 time steps.
+                Upon registration, each person will receive an array of length 2190 representing the gift position in consecutive time steps.
+                The goal is to maximize the growth rate of their own resources; estimating the bias with which the gift is hidden over time; determining, at each time step, which box is convenient to initially choose to receive the hint; betting on the position of the gift in the next 1095 time steps; and exchanging resources with other participants in the competition.
+                </p>
+
+              <p>
+              Ver detalles en el documento <a href="https://metodosbayesianos.github.io/archivos/2023/competition.pdf">https://metodosbayesianos.github.io/archivos/2023/competition.pdf</a>.</p>
 
 
+              <br><br>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
+              <div class="center">
 
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
 
-        <br>
-        <br>
+              <h5 class="header col s12 light">
+                  Organized by
+              </h5>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
+              <br><br><br><br>
 
-        <br>
 
+                <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/012c666a988e448ec4cc3869b03f8a3fd732c7a1/logos/BML.svg" alt="logo_LMB" style="width: 70%"></a>
+
+              </div>
+
+
+              </div>
+          </div>
+      </div>
+
+      <br><br><br><br><br><br><br>
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
           <div class="nav-wrapper container">
@@ -230,5 +223,5 @@
           );
       </script>
       <!-- END FOOTER -->
-    </body>
-  </html>
+  </body>
+</html>
