--- a/en/network.html
+++ b/en/network.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html>
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -118,87 +118,48 @@
 
 
         <div class="section no-pad-bot" id="index-banner">
-            <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
-            </div>
+          <div class="container">
+          </div>
+      </div>
 
-            <br>
+      <div class="container">
+          <div class="section">
+              <h4 class="header col s12 light">
+                  Social networks:
+              </h4>
 
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
+            <ul>
+                <li>&#x2022; Email: bayesplurinacional@gmail.com</li>
+            </ul>
 
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
-                </div>
-
-        </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
-            </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
+            <ul>
+                <li>&#x2022; Group of mails (<b>official communications</b>): <a href="https://groups.google.com/g/bayes-plurinacional">https://groups.google.com/g/bayes-plurinacional</a></li>
+                <li>&#x2022; Doodle (<b>day-to-day communications</b>): <a href="https://discord.gg/2dsAjBBFG3">https://discord.gg/2dsAjBBFG3</a></li>
+                <li>&#x2022; WhatsApp (<b>for specific events such as congresses</b>): <a href=" https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc">https://chat.whatsapp.com/B4wjB4W68wBBcKx3Q16Oxc</a></li> </li>
+            </ul>
 
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
+              <h5 class="header col s12 light">
+                  Diffusion:
+              </h5>
 
 
+                <ul>
+                    <li>&#x2022; Twitter: <a href="https://twitter.com/BayesPlurinacio">https://twitter.com/BayesPlurinacio</a></li>
+                    <!--<li>&#x2022; Youtube: <a href="https://www.youtube.com/@bayesdelsur">https://www.youtube.com/@bayesdelsur</a></li>-->
+                    <li>&#x2022; Linkedin: <a href="https://www.linkedin.com/company/bayes-plurinacional/">https://www.linkedin.com/company/bayes-plurinacional/</a></li>
+                    <!--<li>&#x2022; Mastodon: <a href="https://bayes.club/@BayesDelSur">https://bayes.club/@BayesDelSur</a></li>
+                    <li>&#x2022; Facebook: <a href="https://www.facebook.com/bayesdelsur/">https://www.facebook.com/bayesdelsur/</a></li>
+                    <li>&#x2022; Instagram: <a href="https://www.instagram.com/bayesdelsur/">https://www.instagram.com/bayesdelsur/</a></li>-->
+                </ul>
+                </h6>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
 
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
+              
+          </div>
+      </div>
 
-        <br>
-        <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
-
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
           <div class="nav-wrapper container">
@@ -230,5 +191,5 @@
           );
       </script>
       <!-- END FOOTER -->
-    </body>
-  </html>
+  </body>
+</html>
