--- a/en/plural.html
+++ b/en/plural.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html>
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -117,87 +117,58 @@
 
 
 
+
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
             </div>
+        </div>
 
-            <br>
+        <div class="container">
+            <div class="section" style="text-align: justify;">
 
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
+                <h4 class="header col s12 light">
+                Plurinational Bayes
+                <h4>
 
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
+                <h6 class="header col s12 light">
+                The word Plurinational represents in South America the coexistence of our local cultural diversities. This vision is particularly appropriate for a community working with Bayesian methods because, unlike ad-hoc procedures that select a single hypothesis (e.g. by maximum likelihood), the strict application of probability rules (Bayesian approach) forces us to consider each and every hypothesis. Just as Bayesian methods adapt to uncertainty by believing in mutually contradictory hypotheses, a plurinational society adapts to life through the coexistence of our diversities.
+                </h6>
+
+                <h6 class="header col s12 light">
+                Science has a claim to truth: to reach intersubjective agreements with universal validity.
+                Formal sciences (mathematics, logic) reach these agreements by deriving theorems within closed axiomatic systems.
+                However, the empirical sciences (from physics to the social sciences) must validate their propositions in open systems that always contain some degree of uncertainty.
+                Is it then possible to reach intersubjective agreements ("truths") in empirical sciences in which it is inevitable to say "I don't know"?
+                Yes.
+                We can avoid lying: by maximizing uncertainty (not asserting more than what is known) given the available information (without hiding what is known).
+                </h6>
+
+                <h6 class="header col s12 light">
+                The rules of probability have been known since the end of the 18th century and have since been adopted as a system of reasoning in all empirical sciences.
+                They are conceptually intuitive: preserve the prior belief that remains compatible with the data (product rule) and predict with the contribution of all hypotheses (sum rule).
+                Although nothing better has been proposed in the meantime, the computational cost associated with the evaluation of the entire hypothesis space has in fact limited its applicability.
+                Therefore, over time, partial solutions were developed, such as statistical physics in the 19th century and the frequentist approach in the 20th century.
+                Only with the enormous growth in computing power, on the eve of the 21st century, did it become possible for the first time to strictly apply the rules of probability in all fields of science.
+                </h6>
+
+                <h6 class="header col s12 light">
+                After overcoming these obstacles, historical inertia now appears as one of the main limitations.
+                Although the growth of the Bayesian approach is currently an accelerating worldwide phenomenon, its development is still in its early stages.
+                Although knowledge under uncertainty is "plural and conditional", the traditional language of the empirical sciences is presented as "singular and definitve".
+                Just as selecting a single hypothesis has known negative consequences in probability (overfitting), the massive loss of cultural diversity caused by the imposition of a single type of society during colonial-modernity is having ecological consequences that metropolitan science is unable to compensate for.
+                </h6>
+
+                <h6 class="header col s12 light">
+                The goal of Bayes Plurinational is to strengthen the Bayesian communities of Latin America, the Caribbean and the peoples of the global South.
+                The scientific and philosophical transition is going to happen.
+                The advantage of plurality is a fact for knowledge and life.
+                </h6>
+
+
                 </div>
-
-        </div>
         </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
-            </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
-
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
+        <p class="bottom-blank"><!--Vertical spacer--></p>
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
