--- a/en/poster.html
+++ b/en/poster.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html>
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -119,86 +119,65 @@
 
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
             </div>
+        </div>
+
+        <div class="container">
+            <div class="section">
+                <h4 class="header col s12 light">
+                    Talks:
+                </h4>
+            <br>
+
+            <h6>Recommendations for Poster Preparation:</h6>
+
+            <br>
+            1. <em>Size and Orientation</em>: It is recommended to use A0 size for the poster, with a vertical (portrait) orientation. This will provide sufficient space to display and highlight the content.
 
             <br>
 
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
+            2. <em>Structure</em>: An effective poster should have a clear and organized structure. It is suggested to divide the poster into sections such as introduction, methodology, results, conclusions, and references. Use clear titles and subtitles for each section and ensure that the information flows naturally.
 
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
+            <br>
+
+            3. <em>Concise Content</em>: The goal of a poster is to accompany a conversation. Therefore, it is advisable to communicate the key points of your work in a concise and effective manner. Avoid filling the poster with dense and lengthy text. Use bullet points, short phrases, and graphics to summarize the most important findings.
+
+            <br>
+
+            4. <em>Design and Aesthetics</em>: The design of the poster is crucial to capture the attention of viewers. Use readable and attractive colors and fonts. Avoid using fonts that are too small as they make reading from a distance difficult. Use images, graphics, and tables to make the content more interesting and understandable.
+
+            <br>
+
+            5. <em>References</em>: If it is necessary to cite bibliographic sources, include a references section at the end of the poster. Make sure to follow a consistent citation style and use the provided "biblio.bib" file to manage the references.
+
+            <br><br>
+
+            <h6>LaTeX Format</h6>
+
+            <br>
+
+            There are no restrictions regarding the format. For those who wish, <a href="http://bayesdelsur.com.ar/poster/latex.zip" target="_blank">we offer a compressed folder to generate a poster in LaTeX format.</a>
+            Make sure you have LaTeX installed on your system.
+            Open a terminal and navigate to the location of the folder.
+            To compile the poster, run "make compile" or refer to the file for more information.
+            This procedure will execute the compilation, including the generation of the bibliography, and produce a PDF file of the poster.
+
+           <br>
+           <br>
+
+            We hope that these recommendations and provided instructions are useful for the preparation of your poster. Good luck with your presentation at the conference!
+
+           <br>
+
+
+
                 </div>
-
-        </div>
         </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
-            </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
-
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
+        <p class="bottom-blank"><!--Vertical spacer--></p>
 
         <br>
         <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
-
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
           <div class="nav-wrapper container">
