--- a/en/city.html
+++ b/en/city.html
@@ -117,87 +117,63 @@
 
 
 
+
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
             </div>
+        </div>
 
-            <br>
+        <div class="container">
+            <div class="section">
+                <h4 class="header col s12 light">
+                    Location:
+                </h4>
+                
+                <div class="section" style="text-align: justify;">
+                    <p>The activities of the Congress will be carried out in the <a href="https://nodosde.gob.ar/"><span class="blue-grey-text">Nodo Tecnológico</span></a> located within the La Isla Industrial Park, in the city of La Banda, Santiago del Estero, Argentina.</p>
+                    <p>Address: Los Molinos Avenue, G4300, La Banda, Santiago del Estero.</p>
 
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
-
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
+                    <div class="row">
+                        <iframe src="https://www.google.com/maps/d/u/2/embed?mid=1Vm4JzAB9oJCVz14oSvcai4Cz2OLl8m8&ehbc=2E312F" width="100%" height="400"></iframe>
+                    </div>
                 </div>
 
-        </div>
-        </div>
+                <h4 class="header col s12 light">
+                    Transport:
+                </h4>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
+                <div class="section" style="text-align: justify;">
+                    <p>One of the alternatives is the <a href="https://es.m.wikipedia.org/wiki/Tren_al_Desarrollo" target="_blank"> Tren Al Desarrollo SDE, Santiago del Estero.</a>
+                    </p>
+
+                    <p>
+                    The urban train of Santiago del Estero, or Tren al Desarrollo, runs along the Mitre Line tracks between the city of Santiago del Estero and La Banda, in Argentina. It starts from the Centro Station near the Fórum to the Nodo Station.
+                    </p>
+
+                    <p>
+                    Cost: Free.
+                    </p>
+
+                    <p>
+                    Frequency: currently the frequency is every 60 minutes.
+                    </p>
+
+                    <p>
+                    More information <a href="https://www.facebook.com/TADSDE?locale2=es_LA" target="_blank"> here.</a>
+                    </p>
+
             </div>
 
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
-            </div>
-        </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
+            <h4 class="header col s12 light">
+            Accommodation:
+            </h4>
 
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
+            You can find some hotels at<a href="https://www.google.com/maps/search/Hotels/@-27.755704,-64.2817257,14z" target="_blank"> Google Maps</a>
 
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
-
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
         </div>
 
-        <br>
-        <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
+        <p class="bottom-blank"><!--Vertical spacer--></p>
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
