--- a/en/conduct.html
+++ b/en/conduct.html
@@ -119,85 +119,48 @@
 
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
-            </div>
-
-            <br>
-
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
-
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
-                </div>
-
-        </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
             </div>
         </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
+        <div class="container">
+            <div class="section" style="text-align: justify;">
+            <h4>Code of Conduct</h4>
+            <h5>The first right is to be part of a community.</h5>
+              <hr></hr>
+              <p>Codes of conduct in general are similar to Article 12 of the Colombian Constitution: "No one shall be subjected to enforced disappearance or to cruel, inhuman and humiliating treatment". When the original Wayúu people, who lived through 500 years of colonialism in Colombia, translated this article they wrote: <em>No one will be able to take anyone above their heart or harm another person even if they think and speak differently</em>.</p>
+              <p>The experience accumulated by the most diverse communities in the world has led, independently, to a universal obligation to give and receive, and to the development of technologies of reciprocity that reactivate community bonds through (festive or coercive) exchange rites.</p>
+              <p>The Congress is in itself a festive rite that aims to create and update our bonds. That is why we do it. We want to get to know each other and build reciprocal relationships. But we know that in every society conflicts arise and it is important to take care of the people who may feel affected. Therefore, in case of conflict, contact someone you trust and a member of the organization.</p>
+              <p>To preserve the health of bonds, coercive community systems first activate the three possible types of relationships: (&rarr;) the gestures, acts or gifts that the accused party offers to the affected party; (&larr;) the help that is offered to the accused party to modify the behavior that gave rise to the conflict; (&harr;) and the exchange that renews understanding. Only as a last resort, in the case that the person persists in an attitude that affects the health of community ties, the accused person may be expelled.</p>
+              <p>As the last principle of Buen Vivir (in Aymara) says: <em>Suma Churaña, Suma Katukañaz</em>. We must know how to give and receive with joy and gratitude because life is the union of many beings and forces. See you at the next party to nourish our bonds.</p>
+              <h5>Principles of Buen Vivir (Aymara version)</h5>
+              <hr></hr>
+              <p>
+              <ul>
+                <li>1. <em>Suma Manq'aña</em>: (Knowing how to eat). Eating is an exchange of life. We are what we eat.</li>
+                <li>2. <em>Suma Umaña</em>: (Knowing how to drink). Water is the source of all forms of life.</li>
+                <li>3. <em>Suma Thokoña</em>: (Know how to dance). Always act with a spiritual dimension.</li>
+                <li>4. <em>Suma Ikiña</em>: (Know how to sleep). Sleep before midnight, to have the energy of two days.</li>
+                <li>5. <em>Suma Irnakaña</em>: (Knowing how to work). Community work is joy.</li>
+                <li>6. <em>Suma Lupiña</em>:  (Knowing how to meditate). Personal silence (<em>Amiki</em>) restores the silence of the environment (<em>Ch'uju</em>).</li>
+                <li>7. <em>Suma Amuyaña</em>: (Know how to think). Without losing reason, let us walk the path of the heart.</li>
+                <li>8. <em>Suma Munaña Munayasiña</em> (Know how to love and be loved): The process of complementarity and respect for all beings.</li>
+                <li>9. <em>Suma Ist'aña</em>: (Knowing how to listen). To perceive, to feel, to listen with the whole body.</li>
+                <li>10. <em>Suma Aruskipaña</em>: (Knowing how to speak). What is spoken is written in the hearts of those who listen.</li>
+                <li>11. <em>Suma Samkasiña</em>: (Knowing how to dream). Everything starts from dreams. Therefore, dreams are the beginning of reality.</li>
+                <li>12. <em>Suma Sarnaqaña</em>: (Knowing how to walk). There is no tiredness for those who know how to walk. We never walk alone, we walk alongside Pachamama.</li>
+                <li>13. <em>Suma Churaña, suma Katukaña</em>: (Knowing how to give and receive). We must know how to give and receive with joy and gratitude because life is the union of many beings and forces.</li>
+              </ul>
+              </p>
+              <h5>Contact</h5>
+              <hr></hr>
+              <p><a href="mailto:bayesplurinacional@gmail.com">bayesplurinacional@gmail.com</a></p>
+              <h5>License</h5>
+              <hr></hr>
+              <p>This Code of Conduct has been adapted from the indigenous cosmovisions of Abya Yala and is distributed under a Creative Commons Zero license.</p>
+                    </div>
             </div>
 
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
-
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
+            <p class="bottom-blank"><!--Vertical spacer--></p>
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
