--- a/en/music.html
+++ b/en/music.html
@@ -118,86 +118,47 @@
 
 
         <div class="section no-pad-bot" id="index-banner">
-            <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
-            </div>
-
-            <br>
-
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
-
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
-                </div>
-
-        </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
             </div>
         </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
+        <div class="container">
+            <div class="section" style="text-align: justify;">
+              <h4>Plurinational Music</h4>
+              <p>(Foreign advertisements may appear only in the first few seconds).</p>
+              <h5> Radio: <a href="https://stream-21.zeno.fm/u1nngtkfp9duv?zs=pjrIHCHKTkG6elMKwOW69w&listening-from-radio-garden=1665234330" target="_blank"><em>El Charco</em></a>.</h5>
+              <a href="https://stream-21.zeno.fm/u1nngtkfp9duv?zs=pjrIHCHKTkG6elMKwOW69w&listening-from-radio-garden=1665234330"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/charco.jpg" alt="Tapa" style="width: 100%;"></a>
+              <h5> Radio: <a href="http://192.99.203.81:8704/stream?listening-from-radio-garden=1665304744" target="_blank"><em>Tame</em></a>.</h5>
+              <a href="http://192.99.203.81:8704/stream?listening-from-radio-garden=1665304744"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/tame.jpg" alt="Tapa" style="width: 100%;"></a>
+              <h5> Radio: <a href="https://play.streamingcast.live/web/bssradio?listening-from-radio-garden=1665310199" target="_blank"><em>Santo Domingo</em></a>.</h5>
+              <a href="https://play.streamingcast.live/web/bssradio?listening-from-radio-garden=1665310199"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/santoDomingo.jpg" alt="Tapa" style="width: 100%;"></a>
+              <h5> Radio: <a href="https://stream-37.zeno.fm/unde9yxcyzzuv?zs=jc18MZ9tQUy4khWMOLSM1A&listening-from-radio-garden=1666515914" target="_blank"><em>Llamellín</em></a>.</h5>
+              <a href="https://stream-37.zeno.fm/unde9yxcyzzuv?zs=jc18MZ9tQUy4khWMOLSM1A&listening-from-radio-garden=1666515914"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/llamellin.jpg" alt="Tapa" style="width: 100%;"></a>
+              <h5> Radio: <a href="http://74.122.88.5:3333/;?listening-from-radio-garden=1665235669" target="_blank"><em>Hillsborough</em></a>.</h5>
+              <a href="http://74.122.88.5:3333/;?listening-from-radio-garden=1665235669"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/hillsborough.jpg" alt="Tapa" style="width: 100%;"></a>
+              <h5> Radio: <a href="https://emiteradio.com/proxy/uyuni?mp=/stream&listening-from-radio-garden=1666517190" target="_blank"><em>Uyuni</em></a>.</h5>
+              <a href="https://emiteradio.com/proxy/uyuni?mp=/stream&listening-from-radio-garden=1666517190"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/uyuni.jpg" alt="Tapa" style="width: 100%;"></a>
+              <h5> Radio: <a href="http://radio02.ferozo.com:9000/stream/;?listening-from-radio-garden=1665306103" target="_blank"><em>Córdoba</em></a>.</h5>
+              <a href="http://radio02.ferozo.com:9000/stream/;?listening-from-radio-garden=1665306103"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/cordoba.jpg" alt="Tapa" style="width: 100%;"></a>
+              <h5> Radio: <a href="https://emiteradio.com/proxy/atipiriradio?mp=/stream&listening-from-radio-garden=1665307037" target="_blank"><em>El Alto</em></a>.</h5>
+              <a href="https://emiteradio.com/proxy/atipiriradio?mp=/stream&listening-from-radio-garden=1665307037"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/elAlto.jpg" alt="Tapa" style="width: 100%;"></a>
+              <h5> Radio: <a href="http://streamingraddios.online:10354/;?listening-from-radio-garden=1666516300" target="_blank"><em>Corrientes</em></a>.</h5>
+              <a href="http://streamingraddios.online:10354/;?listening-from-radio-garden=1666516300"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/corrientes.jpg" alt="Tapa" style="width: 100%;"></a>
+              <!--
+              <h5> Radio: <a href="http://192.99.38.174:9522/stream?listening-from-radio-garden=1666513816" target="_blank"><em>Resistencia</em></a>.</h5>
+              -->
+              <h5> Radio: <a href="https://s1-ssl.vpsradio.com/radio/8036/radio.acc?listening-from-radio-garden=1665306429" target="_blank"><em>Valledupar</em></a>.</h5>
+              <a href="https://s1-ssl.vpsradio.com/radio/8036/radio.acc?listening-from-radio-garden=1665306429"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/valledupar.jpg" alt="Tapa" style="width: 100%;"></a>
 
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
+              <!--<h5> Radio: <a href="https://proxy.turadioinfo.com/8200?listening-from-radio-garden=1665307265" target="_blank"><em>San Carlos</em></a>.</h5>
+              <a href="https://proxy.turadioinfo.com/8200?listening-from-radio-garden=1665307265"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/sanCarlos.jpg" alt="Tapa" style="width: 100%;"></a>-->
+              <!-- <h5> Radio: <a href="https://audio2.tustreaming.cl:8036/;?listening-from-radio-garden=1665307491" target="_blank"><em>Villa Maniguales</em></a>.</h5>
+              <a href="https://audio2.tustreaming.cl:8036/;?listening-from-radio-garden=1665307491"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/maniguales.jpg" alt="Tapa" style="width: 100%;"></a>
+              -->
 
+              </div>
+              </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
-
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
+              <p class="bottom-blank"><!--Vertical spacer--></p>
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
