--- a/en/workshop.html
+++ b/en/workshop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html>
 <!-- BEGIN HEADER -->
 <head>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -117,87 +117,56 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
-            <br><br>
-            <div class="center"><img class="responsive-img" src="logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h5 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h5>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Latin America, the Caribbean, and the peoples of the Global South. Despite the fact that knowledge under uncertainty is "plural and conditional," colonial-modern science and politics have presented themselves as "singular and definitive". The scientific, cultural, and ecological transition in favor of plurality is going to happen.</h6>
-            </div>
-
-            <br>
-
-                <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
-               </div>
-
-               <div class="row center">
-                <h5 class="header col s12 light">Join the growing plurinational Bayesian community!</h5>
-                </div>
-
-        </div>
-        </div>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="logos/NODOSdE.png" alt="NODO"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.2; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="logos/secretariaSE.png" alt="secretaría Santiago"></a>
             </div>
         </div>
 
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.35;">
-            <a href="https://www.fcecon.unr.edu.ar/seccion/facultad/escuela-de-estadistica"><img class="responsive-img" src="logos/logo-UNR.jpg" alt="logo_unr"></a>
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-left: 4%">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/CRC.jpg" alt="CRC"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
+        <div class="container">
+<div class="section" style="text-align: justify;">
+              <h4>Workshop (only spanish version):</h4>
+              <br>
+              <img class="responsive-img" src="img/curso/curso-1.png" border="1" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-0.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;">
+              <br>
+              <img class="responsive-img" src="img/curso/curso-2.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;">
+              <br>
+              <img class="responsive-img" src="img/curso/curso-3.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;">
+              <br>
+              <img class="responsive-img" src="img/curso/curso-4.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-5.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-6.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-7.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-8.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-9.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-10.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              <img class="responsive-img" src="img/curso/curso-11.png" alt="Tapa" style="width: 100%; border:1px solid #000000; padding:2px; margin:2px;"><br>
+              </div>
         </div>
 
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
-            <a href="https://github.com/PythonNorte"><img class="responsive-img" src="logos/pythonNorte.jpg" alt="Figure 1"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3">
-            <img class="responsive-img" src="logos/redPublicas.jpg" alt="Figure 2">
-            </div>
-        </div>
-
-
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.26;margin-right: 3%;margin-left:     8%">
-            <img class="responsive-img" src="logos/lujan.jpg" alt="Figure 2">
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-
-            <div class="figure" style="flex: 0.3; margin-right: 6%;margin-left: 6%">
-            <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="logos/sae.jpeg" alt="logo_unr"></a>
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.33;">
-            <a href="https://metodosbayesianos.github.io/"><img class="responsive-img" src="https://raw.githubusercontent.com/MetodosBayesianos/static/3f0ec047b6425164c18ba2f35333a15574de5975/logos/LMB.svg" alt="Metodos"></a>
-            </div>
-            <div class="figure" style="flex: 0.3; margin-left: 4%;margin-bottom: 4%;">
-            <a href="https://www.routledge.com/"><img class="responsive-img"  src="logos/sadosky.jpg" alt="sadosky"></a>
-            <!--<figcaption>Evaluación bayesiana</figcaption>-->
-            </div>
-        </div>
-
-        <br>
+        <p class="bottom-blank"><!--Vertical spacer--></p>
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
