--- a/navega_en.html
+++ b/navega_en.html
@@ -1,83 +1,112 @@
-        <!-- BEGIN HEADER -->
-      <ul id="dropdown0" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="../es/index.html">Castellano</a></li>
-            <li><a href="../en/index.html">English</a></li>
-        </ul>
-        <ul id="dropdown1" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="../es/index.html">Castellano</a></li>
-            <li><a href="../en/index.html">English</a></li>
-        </ul>
-        <ul id="dropdown2" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="plural_en.html">Plural</a></li>
-            <!--<li><a href="organiza_en.html">Organizers</a></li>-->
-            <li><a href="community.html">Community</a></li>
-        </ul>
+<!-- BEGIN HEADER -->
+<head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+    <title>Bayes</title>
+    <!--Let browser know website is optimized for mobile-->
+    <link rel="stylesheet" href="../css/cronograma.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/others.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8">
+    <!--Latex Mode-->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <!--One way to display figures side by side-->
+    <style>
+    .figcontainer {
+    display: flex;
+    justify-content: center;
+    }
 
-        <ul id="dropdown3" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="city.html">City</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="talks.html">Talks</a></li>
-            <li><a href="poster_en.html">Posters</a></li>
-            <li><a href="workshop.html">Workshop</a></li>
-            <li><a href="scholarship.html">Scholarship</a></li>
+    .figure {
+    margin: 10px;
+    }
+    </style>
+</head>
+<body>
+    <ul id="dropdown0" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../es/index.html">Castellano</a></li>
+        <li><a href="../en/index.html">English</a></li>
+    </ul>
+    <ul id="dropdown1" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../es/index.html">Castellano</a></li>
+        <li><a href="../en/index.html">English</a></li>
+    </ul>
+    <ul id="dropdown2" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../en/plural.html">Plural</a></li>
+        <!--<li><a href="../en/organiza_en.html">Organizers</a></li>-->
+        <li><a href="../en/community.html">Community</a></li>
+    </ul>
+
+    <ul id="dropdown3" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../en/about.html">About</a></li>
+        <li><a href="../en/city.html">City</a></li>
+        <li><a href="../en/schedule.html">Schedule</a></li>
+        <li><a href="../en/talks.html">Talks</a></li>
+        <li><a href="../en/poster_en.html">Posters</a></li>
+        <li><a href="../en/workshop.html">Workshop</a></li>
+        <li><a href="../en/scholarship.html">Scholarship</a></li>
+    </ul>
+
+    <ul id="dropdown4" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../en/seminar.html">Seminar</a></li>
+        <!--<li><a href="../en/hackathon.html">Hackathon</a></li>-->
+    </ul>
+
+    <ul id="dropdown5" class="dropdown-content">
+        <li><a href=""></a></li>
+        <li><a href="../en/network.html">Social</a></li>
+        <li><a href="../en/conduct.html">Conduct</a></li>
+        <li><a href="../en/faq.html">FAQ</a></li>
+    </ul>
+
+    <nav class="blue-grey" role="navigation" style="position:fixed">
+        <div class="nav-wrapper container"><a id="logo-container" href="../en/index.html" class="brand-logo"><em>Bayes</em></a>
+            <ul class="right hide-on-med-and-down">
+            <li><a class="dropdown-button" href="#!" data-target="dropdown2">We are<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congress<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contact<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a href="../en/music.html">Music</a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown0"><i class="fa fa-language"></i></a></li>
         </ul>
+    </nav>
 
-        <ul id="dropdown4" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="seminar.html">Seminar</a></li>
-            <!--<li><a href="hackathon.html">Hackathon</a></li>-->
+    <nav class="blue-grey" role="navigation">
+        <ul id="nav-mobile" class="sidenav">
+        <li><a class="dropdown-button" href="#!" data-target="dropdown1"><i class="fa fa-language"></i></a>
+        <li><a href="../en/index.html">Plurinational Bayes</a></li>
+        <li><a href="">WE ARE:</a></li>
+        <li><a href="../en/plural.html">&#x2022; Plural</a></li>
+        <!--<li><a href="../en/organiza_en.html">&#x2022; Organizers</a></li>-->
+        <li><a href="../en/community.html">&#x2022; Community</a></li>
+        <li><a href="../en/music.html">&#x2022; Music</a></li>
+        <li><a href="">CONGRESS:</a></li>
+        <li><a href="../en/about.html">&#x2022; About</a></li>
+        <li><a href="../en/city.html">&#x2022; City</a></li>
+        <li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
+        <li><a href="../en/talks.html">&#x2022; Talks</a></li>
+        <li><a href="../en/poster.html">&#x2022; Posters</a></li>
+        <li><a href="../en/workshop.html">&#x2022; Workshop</a></li>
+        <li><a href="../en/scholarship.html">&#x2022; Scholarship</a></li>
+        <li><a href="">VIRTUAL:</a></li>
+        <li><a href="../en/seminar.html">&#x2022; Seminar</a></li>
+        <!--<li><a href="../en/hackathon.html">&#x2022; Hackathon</a></li>-->
+        <li><a href="">CONTACT:</a></li>
+        <li><a href="../en/network.html">&#x2022; Social</a></li>
+        <li><a href="../en/conduct.html">&#x2022; Conduct</a></li>
+        <li><a href="../en/faq.html">&#x2022; FAQ</a></li>
         </ul>
-
-        <ul id="dropdown5" class="dropdown-content">
-            <li><a href=""></a></li>
-            <li><a href="network.html">Social</a></li>
-            <li><a href="conduct.html">Conduct</a></li>
-            <li><a href="faq_en.html">FAQ</a></li>
-        </ul>
-
-        <nav class="blue-grey" role="navigation" style="position:fixed">
-            <div class="nav-wrapper container"><a id="logo-container" href="index_en.html" class="brand-logo"><em>Bayes</em></a>
-                <ul class="right hide-on-med-and-down">
-                <li><a class="dropdown-button" href="#!" data-target="dropdown2">We are<i class="material-icons right">arrow_drop_down</i></a></li>
-                <li><a class="dropdown-button" href="#!" data-target="dropdown3">Congress<i class="material-icons right">arrow_drop_down</i></a></li>
-                <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
-                <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contact<i class="material-icons right">arrow_drop_down</i></a></li>
-                <li><a href="music.html">Music</a></li>
-                <li><a class="dropdown-button" href="#!" data-target="dropdown0"><i class="fa fa-language"></i></a></li>
-            </ul>
-        </nav>
-
-        <nav class="blue-grey" role="navigation">
-          <ul id="nav-mobile" class="sidenav">
-            <li><a class="dropdown-button" href="#!" data-target="dropdown1"><i class="fa fa-language"></i></a>
-            <li><a href="index_en.html">Plurinational Bayes</a></li>
-            <li><a href="">WE ARE:</a></li>
-            <li><a href="plural_en.html">&#x2022; Plural</a></li>
-            <!--<li><a href="organiza_en.html">&#x2022; Organizers</a></li>-->
-            <li><a href="community.html">&#x2022; Community</a></li>
-            <li><a href="music.html">&#x2022; Music</a></li>
-            <li><a href="">CONGRESS:</a></li>
-            <li><a href="about.html">&#x2022; About</a></li>
-            <li><a href="city.html">&#x2022; City</a></li>
-            <li><a href="schedule.html">&#x2022; Schedule</a></li>
-            <li><a href="talks.html">&#x2022; Talks</a></li>
-            <li><a href="poster_en.html">&#x2022; Posters</a></li>
-            <li><a href="workshop.html">&#x2022; Workshop</a></li>
-            <li><a href="scholarship.html">&#x2022; Scholarship</a></li>
-            <li><a href="">VIRTUAL:</a></li>
-            <li><a href="seminar.html">&#x2022; Seminar</a></li>
-            <!--<li><a href="hackathon.html">&#x2022; Hackathon</a></li>-->
-            <li><a href="">CONTACT:</a></li>
-            <li><a href="network.html">&#x2022; Social</a></li>
-            <li><a href="conduct.html">&#x2022; Conduct</a></li>
-            <li><a href="faq_en.html">&#x2022; FAQ</a></li>
-          </ul>
-          <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          </div>
-        </nav>
-        <!-- END HEADER -->
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+    </nav>
+    <!-- END HEADER -->
